--- a/Known Issues/1.0.4.MD
+++ b/Known Issues/1.0.4.MD
@@ -1,4 +1,5 @@
 # List of issues for 1.0.4
+There are probably more issues but as August 30, 2025. It will no longer be maintained.
 
 ## Severity Guide
 - RED - Severe Issue, avoid if possible.
